Update 'xd6i4av8x-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:01cde868e73190d5862483ee5bdf8092600540f3@sha256:85a20f8dfb928c33a6716202f3fdc22a3271351c5c007484d3d78c3c92308191

--- a/components/xd6i4av8x-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/xd6i4av8x-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xd6i4av8x-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:01cde868e73190d5862483ee5bdf8092600540f3@sha256:85a20f8dfb928c33a6716202f3fdc22a3271351c5c007484d3d78c3c92308191
+          name: container-image
